--- a/index.html
+++ b/index.html
@@ -86,13 +86,14 @@
                 </button>
               </div>
         </div>
-        <div class="row mt-4">
+        <div id="cardRows"></div>
+        <!-- <div class="row mt-4">
             <div class="col">
                 <div class="card" style="width: 18rem;">
                     <img src="./assets/images/products/LIPSTICK1005.png" class="card-img-top cardImg" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Lipstick</h5>
-                      <a href="./productDetail.html" class="btn btn-primary">View Detail</a>
+                      <button type="button" class="btn btn-primary" onclick="gotoDetailProduct('LIPSTICK100')">View Detail</button>
                     </div>
                   </div>
             </div>
@@ -123,7 +124,7 @@
                     </div>
                   </div>
             </div>
-        </div>
+        </div> -->
         <div class="row mt-4">
             <div class="col">
                 <div class="card" style="width: 18rem;">
@@ -178,6 +179,7 @@
     </style>
 
     <script>
+      var products = [];
        function isUserLoggedIn(){
         let userName = sessionStorage.getItem('userName') || '';
         if(userName == ''){
@@ -189,6 +191,46 @@
         }
        }
        isUserLoggedIn();
+
+       function gotoDetailProduct(pId){
+        sessionStorage.setItem('productId', pId);
+        window.location.href = "./productDetail.html";
+       }
+       getCardData();
+       function getCardData(){
+        let productApi = "https://retoolapi.dev/ezwyLo/shoppyProducts";
+
+        fetch(productApi)
+        .then(response => response.json())
+        .then(responseData => {
+          products = responseData;
+          generateCard(products);
+        });
+       }
+
+       function generateCard(){
+        let result = "";
+
+        for(let idx=0; idx < 4; idx++){
+          if(idx==0 || idx==4)
+            result += '<div class="row mt-4">';
+          
+          result += '<div class="col">'+
+            '<div class="card" style="width: 18rem;">' +
+              '<img src="./assets/images/products/'+products[idx].pImg+'.png" class="card-img-top cardImg"/>' +
+              '<div class="card-body">'+
+                '<h5 class="card-title">'+products[idx].pName+'</h5>'+
+                '<button type="button" class="btn btn-primary" onclick="gotoDetailProduct('+products[idx].id+')">View Detail</button>'+
+              '</div>'+
+            '</div></div>';
+
+          if(idx==3 || idx==7)
+              result += '</div>';
+
+        }
+console.log(result);
+        document.getElementById('cardRows').innerHTML = result;
+       }
     </script>
 </body>
 </html>
