--- a/profile.html
+++ b/profile.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="row mt-4">
                     <div class="col"></div>
-                    <div class="col"><a href="./deactivateAcc.html"> Click here to Deactivate Account</a></div>
+                    <div class="col"><a href="./deactivateAcc.html" class=""> Click here to Deactivate Account</a></div>
                 </div>
                 
             </form>
